===== 1.10.0.4 (Apr 21, 2014) =====
* Fixed metrics == null issue
* Fixed yota-specific class cast exception
* Fixed NPE in FontEntry.equals()
* Fixed NPE in ZLTextPlainModel.getTextLength()
* Fixed skip operation on non-compressed zips

===== 1.10.0.3 (Apr 21, 2014) =====
* Fixed duplicate processing for some CSS properties

===== 1.10.0.2 (Apr 21, 2014) =====
* Fixed NPE in embedded font copying code

===== 1.10.0.1 (Apr 21, 2014) =====
* Fixed NPE if external cache dir is not defined

===== 1.10 (Apr 21, 2014) =====
* Fixed current position storing
* New directory settings
* Android 2.2 and higher: standard cache directory is now used
* Experimental video support
* CSS parsing optimization for ePubs (do not parse css files multiple times)
* CSS support improvement: added support for space-separated classes list
* Added CSS @import support
* Added CSS font-family property support
* Added ePub embedded fonts support
* Android 3.*/4.*: FBReader works in fullscreen mode by default; hint at start added
* Updated Czech localization (by Marek Pavelka)
* Updated Hungarian localization (by Szabó Lajos Balázs)

===== 1.9.6.1 (Feb 24, 2014) =====
* Fixed some config vaues reading (e.g. background)
* Updated Czech localization (by Marek Pavelka)

===== 1.9.6 (Feb 23, 2014) =====
* Config speed optimization
* Fixed bookmarks creation & browsing problem
* Fixed URL resolving (this also fixed bug with some catalogs created with calibre2opds)
* Do not search on qumran sites with cyrillic patterns
* Better network search logic

===== 1.9.5.5 (Feb 4, 2014) =====
* Fixed preference activity on Android 2.* devices

===== 1.9.5.4 (Feb 3, 2014) =====
* Preference activity in a separate process
* Fixed re-setting config value to default operation

===== 1.9.5.3 (Feb 1, 2014) =====
* Fixed YotaPhone second screen support
* Fixed color profile loading
* Updated Basque localization by Ibon Idoiaga Basaras
* Updated Czech localization (by Marek Pavelka)

===== 1.9.5.2 (Feb 1, 2014) =====